<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="32dp"
    android:layout_marginRight="32dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/dialog_background"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewRateApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:text="@string/string_dialog_choose_language"
            android:textColor="@color/color_black"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayoutRu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_default_margin_max"
                android:background="@drawable/button_item_question"
                android:clickable="true"
                android:orientation="horizontal"
                android:padding="@dimen/dimen_default_padding_min">

                <ImageView
                    android:id="@+id/imageViewIcRu"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:clickable="false"
                    app:srcCompat="@drawable/ic_ru" />

                <TextView
                    android:id="@+id/textViewRu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dimen_default_margin_max"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:text="Русский"
                    android:textColor="#5D5F61"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutEn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_default_margin_max"
                android:background="@drawable/button_item_question"
                android:clickable="true"
                android:orientation="horizontal"
                android:padding="@dimen/dimen_default_padding_min">

                <ImageView
                    android:id="@+id/imageViewIcEn"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:clickable="false"
                    app:srcCompat="@drawable/ic_en" />

                <TextView
                    android:id="@+id/textViewEn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dimen_default_margin_max"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:text="English"
                    android:textColor="#5D5F61"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:gravity="right"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/string_cancel"
                android:textAlignment="textEnd"
                android:textColor="@color/color_black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewApply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:clickable="true"
                android:padding="16dp"
                android:text="@string/string_dialog_apply"
                android:textAlignment="textEnd"
                android:textColor="@color/color_black"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>